--- a/0215/c_controll_statement.ipynb
+++ b/0215/c_controll_statement.ipynb
@@ -69,24 +69,184 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"윤년입니다.\"\n"
+      "\"윤년이 아닙니다.\"\n"
      ]
     }
    ],
    "source": [
-    "year = 4000\n",
+    "year = 2007\n",
     "\n",
     "if year %  400 == 0 or year % 100 != 0 and year % 4 == 0:\n",
     "  print('\"윤년입니다.\"')\n",
     "else:\n",
     "  print('\"윤년이 아닙니다.\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# elif (else if): 상위의 조건이 false이면서 elif의 조건이 true이면 실행\n",
+    "# elif 조건:\n",
+    "#   실행문"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = 80\n",
+    "if score > 90:\n",
+    "  print('A')\n",
+    "elif score > 80:\n",
+    "  print('B')\n",
+    "elif score > 70:\n",
+    "  print('C')\n",
+    "elif score > 60:\n",
+    "  print('D')\n",
+    "else:\n",
+    "  print('F')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3등급\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 수박등급 구하기\n",
+    "# 어떤 농장에서는 수박이 10kg이 넘으면 1등급, 그렇지 않고 7kg이 넘으면 2등급,, 그렇지 않고 4kg이 넘으면 3등급, 나머지는 4등급을 준다고 한다. 이 수박의 등급을 정하는 파이썬 코드를 작성한다.\n",
+    "\n",
+    "water_melon = 6\n",
+    "if water_melon > 10:\n",
+    "  print('1등급')\n",
+    "elif water_melon > 7:\n",
+    "  print('2등급')\n",
+    "elif water_melon > 4:\n",
+    "  print('3등급')\n",
+    "else:\n",
+    "  print('4등급')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 중첩 if\n",
+    "# if문 안에 if문 (들여쓰기 조심)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "불합격\n"
+     ]
+    }
+   ],
+   "source": [
+    "gender = '남자'\n",
+    "count = 2\n",
+    "if gender == '남자':\n",
+    "  # 남자일 때\n",
+    "  if count >= 10:\n",
+    "    print('합격')\n",
+    "  else:\n",
+    "    print('불합격')\n",
+    "else:\n",
+    "  # 여자일 때  \n",
+    "  if count >= 5:\n",
+    "    print('합격')\n",
+    "  else:\n",
+    "    print('불합격')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "불합격\n"
+     ]
+    }
+   ],
+   "source": [
+    "if (gender == '남자' and count >= 10) or (gender == '여자' and count >= 5):\n",
+    "  print('합격')\n",
+    "else:\n",
+    "  print('불합격')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 윤년\n",
+    "# 4202년이 윤년인지 아닌지 판별하는 조건문을 작성하시오.\n",
+    "# 윤년이면 “윤년입니다”를 출력하고 아니라면 “윤년이 아닙니다”라고 출력\n",
+    "\n",
+    "# 다른 방식으로 문제를 해결해 오기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://prickle-textbook-12d.notion.site/7216f070ff4c4bf98d99f70dcf19ea02\n",
+    "\n",
+    "\n",
+    "# 두 명의 범죄자 A, B가 체포되어 서로 다른 취조실에서 격리되어 심문을 받고 있다. 이들에게 자백 여부에 따라 다음의 선택이 가능하다.\n",
+    "\n",
+    "# - 둘 중 하나가 배신하여 죄를 자백하면 자백한 사람은 즉시 풀어주고 나머지 한 명이 10년을 복역해야 한다.\n",
+    "# - 둘 모두 서로를 배신하여 죄를 자백하면 둘 다 5년을 복역한다.\n",
+    "# - 둘 모두 죄를 자백하지 않으면 둘 다 1년을 복역한다.\n",
+    "\n",
+    "# 죄수를 나타내는 변수 `XA`, `XB`는 자백하면 `True`, 그렇지 않으면 `False`를 가지는 값이다. 이때 변수 `XA`, `XB` 값에 따라 각각이 복역해야 하는 연 수를 변수 `YA`, `YB`라고 할 때 `YA`, `YB`를 계산하는 프로그램을 만든다.\n",
+    "\n",
+    "# a = input()\n",
+    "# print(a)"
    ]
   }
  ],
