--- a/0215/c_controll_statement.ipynb
+++ b/0215/c_controll_statement.ipynb
@@ -192,7 +192,10 @@
     "  if count >= 5:\n",
     "    print('합격')\n",
     "  else:\n",
-    "    print('불합격')"
+    "    print('불합격')\n",
+    "\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -217,26 +220,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "400\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "not all arguments converted during string formatting",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 10\u001b[0m\n\u001b[0;32m      7\u001b[0m year \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m()\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(year)\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43myear\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m%\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m400\u001b[39;49m \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m     11\u001b[0m   \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m윤년이 아닙니다.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     12\u001b[0m   \u001b[38;5;28;01mif\u001b[39;00m year \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m4\u001b[39m \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
+      "\u001b[1;31mTypeError\u001b[0m: not all arguments converted during string formatting"
+     ]
+    }
+   ],
    "source": [
     "# 윤년\n",
     "# 4202년이 윤년인지 아닌지 판별하는 조건문을 작성하시오.\n",
     "# 윤년이면 “윤년입니다”를 출력하고 아니라면 “윤년이 아닙니다”라고 출력\n",
     "\n",
-    "# 다른 방식으로 문제를 해결해 오기"
+    "# 다른 방식으로 문제를 해결해 오기\n",
+    "\n",
+    "year = input()\n",
+    "print(year)\n",
+    "\n",
+    "if year % 400 != 0:\n",
+    "  print('윤년이 아닙니다.')\n",
+    "  if year % 4 != 0:\n",
+    "    print('윤년이 아닙니다.')\n",
+    "  else:\n",
+    "    print('윤년이 아닙니다.')\n",
+    "else:\n",
+    "  print('윤년 입니다.')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "XA, XB는10년 복역한다\n"
+     ]
+    }
+   ],
    "source": [
-    "# https://prickle-textbook-12d.notion.site/7216f070ff4c4bf98d99f70dcf19ea02\n",
-    "\n",
-    "\n",
     "# 두 명의 범죄자 A, B가 체포되어 서로 다른 취조실에서 격리되어 심문을 받고 있다. 이들에게 자백 여부에 따라 다음의 선택이 가능하다.\n",
     "\n",
     "# - 둘 중 하나가 배신하여 죄를 자백하면 자백한 사람은 즉시 풀어주고 나머지 한 명이 10년을 복역해야 한다.\n",
@@ -245,8 +286,22 @@
     "\n",
     "# 죄수를 나타내는 변수 `XA`, `XB`는 자백하면 `True`, 그렇지 않으면 `False`를 가지는 값이다. 이때 변수 `XA`, `XB` 값에 따라 각각이 복역해야 하는 연 수를 변수 `YA`, `YB`라고 할 때 `YA`, `YB`를 계산하는 프로그램을 만든다.\n",
     "\n",
-    "# a = input()\n",
-    "# print(a)"
+    "XA = input()\n",
+    "print(XA)\n",
+    "XB = input()\n",
+    "print(XB)\n",
+    "\n",
+    "YA = 'XB는 10년 복역한다, XA는 풀어준다'\n",
+    "YB = 'XA는 10년 복역한다, XB는 풀어준다'\n",
+    "\n",
+    "if XA == True and XB == True:\n",
+    "    print('XA ,XB는 5년 복역한다')\n",
+    "    if  XA == True and XB == False:\n",
+    "        print(YA)\n",
+    "    else:\n",
+    "        print(YB)\n",
+    "else:\n",
+    "    print('XA, XB는10년 복역한다')"
    ]
   }
  ],
