--- a/0215/c_controll_statement.ipynb
+++ b/0215/c_controll_statement.ipynb
@@ -220,25 +220,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "400\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "not all arguments converted during string formatting",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 10\u001b[0m\n\u001b[0;32m      7\u001b[0m year \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m()\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(year)\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43myear\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m%\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m400\u001b[39;49m \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m     11\u001b[0m   \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m윤년이 아닙니다.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     12\u001b[0m   \u001b[38;5;28;01mif\u001b[39;00m year \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m4\u001b[39m \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
-      "\u001b[1;31mTypeError\u001b[0m: not all arguments converted during string formatting"
+      "2004\n",
+      "윤년 입니다.\n"
      ]
     }
    ],
@@ -249,22 +239,24 @@
     "\n",
     "# 다른 방식으로 문제를 해결해 오기\n",
     "\n",
-    "year = input()\n",
+    "year = int(input())\n",
     "print(year)\n",
     "\n",
-    "if year % 400 != 0:\n",
-    "  print('윤년이 아닙니다.')\n",
-    "  if year % 4 != 0:\n",
-    "    print('윤년이 아닙니다.')\n",
-    "  else:\n",
-    "    print('윤년이 아닙니다.')\n",
+    "if year % 400 == 0:\n",
+    "  print('윤년 입니다.')\n",
     "else:\n",
-    "  print('윤년 입니다.')\n"
+    "  if year % 4 == 0:\n",
+    "    if year % 100 != 0:\n",
+    "      print('윤년 입니다.')\n",
+    "    else:\n",
+    "      print('윤년이 아닙니다.')\n",
+    "  else:\n",
+    "    print('윤년이 아닙니다.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -272,8 +264,8 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "False\n",
-      "XA, XB는10년 복역한다\n"
+      "True\n",
+      "XA ,XB는 5년 복역한다\n"
      ]
     }
    ],
@@ -286,9 +278,9 @@
     "\n",
     "# 죄수를 나타내는 변수 `XA`, `XB`는 자백하면 `True`, 그렇지 않으면 `False`를 가지는 값이다. 이때 변수 `XA`, `XB` 값에 따라 각각이 복역해야 하는 연 수를 변수 `YA`, `YB`라고 할 때 `YA`, `YB`를 계산하는 프로그램을 만든다.\n",
     "\n",
-    "XA = input()\n",
+    "XA = bool(input('XA자백함?'))\n",
     "print(XA)\n",
-    "XB = input()\n",
+    "XB = bool(input('XB자백함?'))\n",
     "print(XB)\n",
     "\n",
     "YA = 'XB는 10년 복역한다, XA는 풀어준다'\n",
@@ -296,13 +288,39 @@
     "\n",
     "if XA == True and XB == True:\n",
     "    print('XA ,XB는 5년 복역한다')\n",
-    "    if  XA == True and XB == False:\n",
-    "        print(YA)\n",
-    "    else:\n",
-    "        print(YB)\n",
+    "elif XA == True and XB == False:\n",
+    "    print(YA)\n",
+    "elif XB == True and XA == False:\n",
+    "    print(YB)\n",
     "else:\n",
-    "    print('XA, XB는10년 복역한다')"
+    "    print('XA, XB는10년 복역한다')\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if XA == True:\n",
+    "    if XB == True:\n",
+    "        print('XA ,XB는 5년 복역한다')\n",
+    "    else:\n",
+    "        print(YA)\n",
+    "else:\n",
+    "    if XB == True:\n",
+    "        print(YB)\n",
+    "    else:\n",
+    "        print('XA, XB는10년 복역한다')   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
