--- a/0215/c_controll_statement.ipynb
+++ b/0215/c_controll_statement.ipynb
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -264,8 +264,8 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "True\n",
-      "XA ,XB는 5년 복역한다\n"
+      "False\n",
+      "XB는 10년 복역한다, XA는 풀어준다\n"
      ]
     }
    ],
@@ -278,9 +278,9 @@
     "\n",
     "# 죄수를 나타내는 변수 `XA`, `XB`는 자백하면 `True`, 그렇지 않으면 `False`를 가지는 값이다. 이때 변수 `XA`, `XB` 값에 따라 각각이 복역해야 하는 연 수를 변수 `YA`, `YB`라고 할 때 `YA`, `YB`를 계산하는 프로그램을 만든다.\n",
     "\n",
-    "XA = bool(input('XA자백함?'))\n",
+    "XA = input('XA자백함?') == \"True\"\n",
     "print(XA)\n",
-    "XB = bool(input('XB자백함?'))\n",
+    "XB = input('XB자백함?') == \"True\"\n",
     "print(XB)\n",
     "\n",
     "YA = 'XB는 10년 복역한다, XA는 풀어준다'\n",
@@ -317,10 +317,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def twotimes(x):\n",
+    "  y = 2 * x\n",
+    "  return y\n",
+    "\n",
+    "twotimes(10)"
+   ]
   }
  ],
  "metadata": {
