--- a/0216/funtion.ipynb
+++ b/0216/funtion.ipynb
@@ -111,7 +111,7 @@
    "source": [
     "def days1 (month):\n",
     "  result = 28 \n",
-    "  if month == 1 or month == 3 or month == 5 or month == 7 or month == 8 or month == 12:\n",
+    "  if month == 1 or month == 3 or month == 5 or month == 7 or month == 8 or month == 10 or month == 12:\n",
     "    result = 31\n",
     "  elif month == 4 or month == 6 or month == 9 or month == 11:\n",
     "    result = 30\n",
@@ -185,21 +185,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "def days2 (year, month):\n",
-    "  yesrResult = '평년' \n",
-    "  if year %  400 == 0 or year % 100 != 0 and year % 4 == 0:\n",
-    "    yesrResult = '윤년'\n",
+    "  yearResult = '평년' \n",
+    "  monthResult = 28\n",
     "\n",
-    "  monthResult = 28 \n",
-    "  if month == 1 or month == 3 or month == 5 or month == 7 or month  == 8 or month == 12:\n",
+    "  if year %  400 == 0 or (year % 100 != 0 and year % 4 == 0):\n",
+    "    yearResult = '윤년'\n",
+    "\n",
+    "  if month == 1 or month == 3 or month == 5 or month == 7 or month  == 8 or month == 10 or month == 12:\n",
     "    monthResult = 31\n",
     "  elif month == 4 or month == 6 or month == 9 or month == 11:\n",
     "    monthResult = 30\n",
-    "  return(yearResult, monthResult)"
+    "  else:\n",
+    "    if yearResult == '윤년':\n",
+    "      monthResult = 29\n",
+    "    else:\n",
+    "      monthResult = 28\n",
+    "\n",
+    "  return yearResult, monthResult"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('윤년', 29)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "days2(2000, 2)"
    ]
   },
   {
@@ -208,7 +235,144 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year, month = days2()"
+    "# 람다 함수\n",
+    "# 이름이 선언하는 함수, 함수를 변수에 담아서 사용할 수 있도록 해줌\n",
+    "# 변수 = lambda 매개변수[,...]: 실행코드\n",
+    "# 파이썬에서 람다함수는 실행 코드를 여러줄 작성할 수 없음"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "funtion2 = lambda x: 2 * x\n",
+    "\n",
+    "def funtion22 (x):\n",
+    "  return 2 * x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "funtion2(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 지역변수와 전역변수\n",
+    "# 지역에서 선언된 변수는 지역 바깥에서 사용할 수 없음"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local_variable = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def funtion3 () :\n",
+    "  local_variable = 10\n",
+    "  return local_variable\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "funtion3()\n",
+    "local_variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전역에 선언된 변수를 지역에서 사용하고자 한다면\n",
+    "# 사용전에 먼저 global 키워드로 특정 전역 변수를 사용하겠다고 지정해야함"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local_variable = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def funtion4 ():\n",
+    "  global local_variable\n",
+    "  local_variable = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "funtion4()\n",
+    "local_variable"
    ]
   }
  ],
