--- a/0216/loopstatement.ipynb
+++ b/0216/loopstatement.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -75,30 +75,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n"
+      "*\n",
+      "**\n",
+      "***\n",
+      "****\n",
+      "*****\n",
+      "******\n",
+      "*******\n",
+      "********\n",
+      "*********\n",
+      "**********\n"
      ]
     }
    ],
    "source": [
-    "index = '*'\n",
-    "for index in range(10):\n",
-    "  print(index)"
+    "for count in range(1, 11):\n",
+    "  print('*' * count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**********\n",
+      "*********\n",
+      "********\n",
+      "*******\n",
+      "******\n",
+      "*****\n",
+      "****\n",
+      "***\n",
+      "**\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "for count in range(10, 0, -1):\n",
+    "  print('*' * count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "**\n",
+      "***\n",
+      "****\n",
+      "*****\n",
+      "******\n",
+      "*******\n",
+      "********\n",
+      "*********\n",
+      "**********\n",
+      "*********\n",
+      "********\n",
+      "*******\n",
+      "******\n",
+      "*****\n",
+      "****\n",
+      "***\n",
+      "**\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "for count in range(1, 20):\n",
+    "  if count <= 10:\n",
+    "    print('*' * count)\n",
+    "  else:\n",
+    "    print('*' * (20 - count))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     *\n",
+      "    ***\n",
+      "   *****\n",
+      "  *******\n",
+      " *********\n",
+      "***********\n",
+      " *********\n",
+      "  *******\n",
+      "   *****\n",
+      "    ***\n",
+      "     *\n"
+     ]
+    }
+   ],
+   "source": [
+    "for count in range(1, 12):\n",
+    "  if count <= 6:\n",
+    "    print(\" \" * (6 - count) + '*' * (count * 2 - 1))\n",
+    "  else:\n",
+    "    print(\" \" * (count - 6) + '*' * ((12 - count) * 2 - 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     *     \n",
+      "    ***    \n",
+      "   *****   \n",
+      "  *******  \n",
+      " ********* \n",
+      "***********\n",
+      " ********* \n",
+      "  *******  \n",
+      "   *****   \n",
+      "    ***    \n",
+      "     *     \n"
+     ]
+    }
+   ],
+   "source": [
+    "for count in range(1, 12):\n",
+    "  if count <= 6:\n",
+    "    star = '*' * (count * 2 - 1)\n",
+    "  else:\n",
+    "    star = '*' * ((12 - count) * 2 - 1)\n",
+    "  print(f'{star:^11}')"
    ]
   }
  ],
