--- a/0216/loopstatement.ipynb
+++ b/0216/loopstatement.ipynb
@@ -228,6 +228,174 @@
     "    star = '*' * ((12 - count) * 2 - 1)\n",
     "  print(f'{star:^11}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 0 1 2 3 \n",
+    "# 1 2 3 4 \n",
+    "# 2 3 4 5 \n",
+    "# 3 4 5 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 \n",
+      "1 2 3 4 \n",
+      "2 3 4 5 \n",
+      "3 4 5 6 \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(4):\n",
+    "    for j in range(4):\n",
+    "        print(i + j, end=\" \")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 \n",
+      "1 2 3 4 \n",
+      "2 3 4 5 \n",
+      "3 4 5 6 \n"
+     ]
+    }
+   ],
+   "source": [
+    "for start in range(4):\n",
+    "  for value in range(start, start + 4):\n",
+    "    print(value, end=\" \")\n",
+    "  print(\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 3\n",
+      "2 2\n",
+      "2 6\n",
+      "3 1\n",
+      "3 5\n",
+      "4 4\n",
+      "5 3\n",
+      "6 2\n",
+      "6 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a in range(1, 7):\n",
+    "  for b in range(1, 7):\n",
+    "    if (a + b) % 4 == 0:\n",
+    "      print (f'{a} {b}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8192\n",
+      "2048.0\n",
+      "8192\n",
+      "2048.0\n",
+      "8192\n",
+      "2048.0\n",
+      "8192\n",
+      "2048.0\n",
+      "128.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for day1 in range(2):\n",
+    "  money = 1024\n",
+    "  if day1 == 0:\n",
+    "    money * 2\n",
+    "  else:\n",
+    "    money / 2\n",
+    "  for day2 in range(2):\n",
+    "    if day2 == 0:\n",
+    "      money * 2 * 2\n",
+    "    elif day2 == 1:\n",
+    "      money * 2 / 2\n",
+    "    else:\n",
+    "      money / 2 / 2\n",
+    "    for day3 in range(2):\n",
+    "      if day3 == 0:\n",
+    "        print(money * 2 * 2 * 2)\n",
+    "      elif day3 == 1:\n",
+    "        print(money * 2 * 2 / 2)\n",
+    "      else:\n",
+    "        print(money * 2 / 2 / 2)\n",
+    "  else:\n",
+    "    print(money / 2 / 2 / 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64.0\n",
+      "256.0\n",
+      "256.0\n",
+      "1024.0\n",
+      "256.0\n",
+      "1024.0\n",
+      "1024.0\n",
+      "4096.0\n",
+      "256.0\n",
+      "1024.0\n",
+      "1024.0\n",
+      "4096.0\n",
+      "1024.0\n",
+      "4096.0\n",
+      "4096.0\n",
+      "16384\n"
+     ]
+    }
+   ],
+   "source": [
+    "for day1 in range(2):\n",
+    "  for day2 in range(2):\n",
+    "    for day3 in range(2):\n",
+    "      for day4 in range(2):\n",
+    "        print(1024 * 2**(2*day1 - 1) * 2**(2*day2 - 1) * 2**(2*day3 - 1) * 2**(2*day4 - 1))"
+   ]
   }
  ],
  "metadata": {
