--- a/0216/b_loopstatement.ipynb
+++ b/0216/b_loopstatement.ipynb
@@ -363,38 +363,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "64.0\n",
-      "256.0\n",
-      "256.0\n",
-      "1024.0\n",
-      "256.0\n",
-      "1024.0\n",
-      "1024.0\n",
-      "4096.0\n",
-      "256.0\n",
-      "1024.0\n",
-      "1024.0\n",
-      "4096.0\n",
-      "1024.0\n",
-      "4096.0\n",
-      "4096.0\n",
-      "16384\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for day1 in range(2):\n",
     "  for day2 in range(2):\n",
     "    for day3 in range(2):\n",
     "      for day4 in range(2):\n",
     "        print(1024 * 2**(2*day1 - 1) * 2**(2*day2 - 1) * 2**(2*day3 - 1) * 2**(2*day4 - 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "3\n",
+      "6\n",
+      "10\n",
+      "15\n",
+      "21\n",
+      "28\n",
+      "36\n",
+      "45\n"
+     ]
+    }
+   ],
+   "source": [
+    "for count in range (1, 11):\n",
+    "  sum = 0\n",
+    "  for value in range (count):\n",
+    "    sum += value\n",
+    "  print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "220\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum = 0\n",
+    "for count in range (1, 11):\n",
+    "  for value in range (count+1):\n",
+    "    sum += value\n",
+    "print(sum)"
    ]
   }
  ],
