--- a/0216/c_data_structure.ipynb
+++ b/0216/c_data_structure.ipynb
@@ -1010,10 +1010,145 @@
     "# 평균 평점을 구하는 함수\n",
     "# 함수의 매개변수로 grades, credits 리스트를 입력 받고\n",
     "# 평균 평점 gpa를 반환하는 함수를 작성하시오.\n",
-    "# 단, grades, credits의 길이가 서로다르다면 -1을 반환하시오.\n",
+    "# 단, grades, credits의 길이가 서로다르다면 -1을 반환하시오."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grades = [4, 3, 2, 3, 4]\n",
+    "credits = [3, 3, 1, 2, 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getGpa(grades, credits):\n",
+    "    \n",
+    "    if len(grades) != len(credits):\n",
+    "      return -1\n",
     "\n",
-    "X = [4, 3, 2, 3, 4]\n",
-    "W = [3, 3, 1, 2, 2]"
+    "    credits_sum = 0 # 이수 학점의 총합\n",
+    "    weight_sum = 0 # 가중치 총 합\n",
+    "    # for index in range(len(grades)):\n",
+    "    #   credits_sum += credits[index]\n",
+    "    #   weight_sum += credits[index]* grades[index]\n",
+    "\n",
+    "    # zip 사용시 [(4,3), (3,3), (2,1), (3,2), (4,2)]\n",
+    "    for grade, credit in zip(grades, credits):\n",
+    "      credits_sum += credit\n",
+    "      weight_sum += credit * grade\n",
+    "\n",
+    "    # 평균평점 = (가중치 총합) / (이수 학점의 총합)\n",
+    "    gpa = round(weight_sum/credits_sum, 2)\n",
+    "    return gpa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.36"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grades = [4, 3, 2, 3, 4]\n",
+    "credits = [3, 3, 1, 2, 2]\n",
+    "getGpa(grades, credits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# x = [[\"길동\", 90],[\"철수\", 80],[\"영수\", 70],[\"방자\", 60]]\n",
+    "# 복수 할당과 zip 명령을 사용하여 이름만 존재하는 x_names 리스트 변수를 생성하시오."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['길동', 90], ['철수', 80], ['영수', 70], ['방자', 60]]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = [\n",
+    "  [\"길동\", 90],\n",
+    "  [\"철수\", 80],\n",
+    "  [\"영수\", 70],\n",
+    "  [\"방자\", 60]\n",
+    "  ]\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('길동', '철수', '영수', '방자'), (90, 80, 70, 60)]"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r_x = list(zip(*x))\n",
+    "r_x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['길동', '철수', '영수', '방자']"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_names, x_scores = r_x\n",
+    "x_names = list(x_names)\n",
+    "x_names"
    ]
   }
  ],
