--- a/0219/b.oop.ipynb
+++ b/0219/b.oop.ipynb
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,12 +432,18 @@
     "    return f'Complex - [r: {self.r}, i: {self.i}]'\n",
     "  \n",
     "  def __str__(self):\n",
-    "    return f'r: {self.r}, i: {self.i}'"
+    "    return f'r: {self.r}, i: {self.i}'\n",
+    "  \n",
+    "  def __getitem__(self, key):\n",
+    "    if key == 'i':\n",
+    "      return self.i\n",
+    "    if key == 'r':\n",
+    "      return self.r"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +452,7 @@
        "Complex - [r: 1, i: 2]"
       ]
      },
-     "execution_count": 272,
+     "execution_count": 279,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +473,7 @@
        "'r: 1, i: 2'"
       ]
      },
-     "execution_count": 273,
+     "execution_count": 280,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,66 +484,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 281,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 281,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "complex['i']"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 594,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Car ():\n",
+    "\n",
+    "  def __init__(self):\n",
+    "    self.speed = 0\n",
+    "    self.max_speed = 160\n",
+    "    self.gap_speed = 20\n",
+    "\n",
+    "  def speed_up(self):\n",
+    "    if self.speed >= self.max_speed:\n",
+    "      return\n",
+    "    self.speed = self.max_speed if self.speed + self.gap_speed > self.max_speed else self.speed + self.gap_speed\n",
+    "    return f'현재속도 {self.speed}.'\n",
+    "\n",
+    "  def speed_down(self):\n",
+    "    if self.speed <= 0: \n",
+    "      return\n",
+    "    self.speed = 0 if self.speed - self.gap_speed < 0 else self.speed - self.gap_speed\n",
+    "    return f'현재속도 {self.speed}.'\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 595,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Car at 0x1cfb9e45be0>"
+      ]
+     },
+     "execution_count": 595,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "car = Car()\n",
+    "car"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 600,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'현재속도 100.'"
+      ]
+     },
+     "execution_count": 600,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "car.speed_up()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 606,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "car.speed_down()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 607,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class SportCar(Car):\n",
+    "  def __init__(self):\n",
+    "    super().__init__()\n",
+    "    self.max_speed = 200\n",
+    "    self.gap_speed = 45\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 552,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Truck(Car):\n",
+    "  def __init__(self):\n",
+    "    super().__init__()\n",
+    "    self.max_speed = 100\n",
+    "    self.speed = 0\n",
+    "\n",
+    "  def speed_up(self):\n",
+    "    if self.max_speed >= self.max_speed:\n",
+    "      return\n",
+    "    self.speed += 15\n",
+    "    return f'현재속도 {self.speed}.'\n",
+    "\n",
+    "  def speed_down(self):\n",
+    "    if self.speed <= 0: \n",
+    "      return\n",
+    "    self.speed -= 15\n",
+    "    return f'현재속도 {self.speed}.'"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 608,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 608,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sportCar = SportCar()\n",
+    "sportCar.max_speed"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 629,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'현재속도 200.'"
+      ]
+     },
+     "execution_count": 629,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sportCar.speed_up()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 631,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'현재속도 110.'"
+      ]
+     },
+     "execution_count": 631,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sportCar.speed_down()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 514,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Car - [max_speed: 100, speed: 0]"
+      ]
+     },
+     "execution_count": 514,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "truck = Truck(0, 100)\n",
+    "truck"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 294,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "truck.speed_up()"
+   ]
   }
  ],
  "metadata": {
