--- a/0219/b.oop.ipynb
+++ b/0219/b.oop.ipynb
@@ -598,23 +598,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Truck(Car):\n",
-    "  def __init__(self):\n",
-    "    super().__init__()\n",
-    "    self.max_speed = 100\n",
-    "    self.speed = 0\n",
+    "# class Truck(Car):\n",
+    "#   def __init__(self):\n",
+    "#     super().__init__()\n",
+    "#     self.max_speed = 100\n",
+    "#     self.speed = 0\n",
     "\n",
-    "  def speed_up(self):\n",
-    "    if self.max_speed >= self.max_speed:\n",
-    "      return\n",
-    "    self.speed += 15\n",
-    "    return f'현재속도 {self.speed}.'\n",
+    "#   def speed_up(self):\n",
+    "#     if self.max_speed >= self.max_speed:\n",
+    "#       return\n",
+    "#     self.speed += 15\n",
+    "#     return f'현재속도 {self.speed}.'\n",
     "\n",
-    "  def speed_down(self):\n",
-    "    if self.speed <= 0: \n",
-    "      return\n",
-    "    self.speed -= 15\n",
-    "    return f'현재속도 {self.speed}.'"
+    "#   def speed_down(self):\n",
+    "#     if self.speed <= 0: \n",
+    "#       return\n",
+    "#     self.speed -= 15\n",
+    "#     return f'현재속도 {self.speed}.'"
    ]
   },
   {
@@ -695,8 +695,8 @@
     }
    ],
    "source": [
-    "truck = Truck(0, 100)\n",
-    "truck"
+    "# truck = Truck(0, 100)\n",
+    "# truck"
    ]
   },
   {
@@ -705,7 +705,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "truck.speed_up()"
+    "# truck.speed_up()"
    ]
   }
  ],
