--- a/python_numpy/0221/b_numpy_array.ipynb
+++ b/python_numpy/0221/b_numpy_array.ipynb
@@ -1799,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -1822,13 +1822,34 @@
        "        [12, 24]]])"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "numpy_three_d.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.79432823,  1.05250029,  1.39458325,  1.8478498 ,  2.44843675,\n",
+       "        3.24422608,  4.29866235,  5.69581081,  7.54705957, 10.        ])"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.logspace(-0.1, 1, 10)"
    ]
   }
  ],
